정적 요소 properties 수정 / 리팩토링

--- a/PillSafe-web/src/main/resources/templates/login.html
+++ b/PillSafe-web/src/main/resources/templates/login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PillSafe</title>
     <style> </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
   <div class="login-box">
-    <img class="logo" src="logo.png" alt="필세이프 로고">
+    <img class="logo" src="../static/logo.png" alt="필세이프 로고">
     <div class="button-box">
         <button class="google">구글 계정으로 로그인</button>
         <div class="Line" style="width: 320px; height: 0px; border: 0.50px white solid"></div>
