--- a/PillSafe-web/src/main/resources/templates/mainWeb.html
+++ b/PillSafe-web/src/main/resources/templates/mainWeb.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="main_style.css">
+  <link rel="stylesheet" href="../static/main_style.css">
   <title>PillSafe</title>
 </head>
 <body>
   <header>
     <div class="logo">
-      <img src="logo.png" alt="필세이프 로고">
+      <img src="../static/logo.png" alt="필세이프 로고">
     </div>
   </header>
   <main>
@@ -19,7 +19,7 @@
             의약품 검색, <br>
             필 세이프
         </p>
-      <button class="circle-button"  onclick="location.href='camera.html'">검색</button>
+      <button class="circle-button"  onclick="location.href='camera'">검색</button>
     </div>
   </main>
 </body>
