--- a/PillSafe-web/src/main/resources/templates/apiResult.html
+++ b/PillSafe-web/src/main/resources/templates/apiResult.html
@@ -1,33 +1,38 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<head>-->
-<!--    <title>API Result 약 정보 보기!</title>-->
+<!--    <title>API Result</title>-->
 <!--</head>-->
 <!--<body>-->
-<!--<h1>Drug Information</h1>-->
-<!--<div th:each="item : ${apiResponse.body.items}">-->
-<!--    <h2 th:text="${item.entpName}"></h2>-->
-<!--    <p><strong>Item Name:</strong> <span th:text="${item.itemName}"></span></p>-->
-<!--    <p><strong>Effect:</strong> <span th:text="${item.efcyQesitm}"></span></p>-->
-<!--    <p><strong>Usage:</strong> <span th:text="${item.useMethodQesitm}"></span></p>-->
-<!--    <p><strong>Warning:</strong> <span th:text="${item.atpnWarnQesitm}"></span></p>-->
-<!--    <p><strong>Precaution:</strong> <span th:text="${item.atpnQesitm}"></span></p>-->
-<!--    <p><strong>Interaction:</strong> <span th:text="${item.intrcQesitm}"></span></p>-->
-<!--    <p><strong>Side Effects:</strong> <span th:text="${item.seQesitm}"></span></p>-->
-<!--    <p><strong>Storage:</strong> <span th:text="${item.depositMethodQesitm}"></span></p>-->
-<!--    <p><strong>Image:</strong> <img th:src="${item.itemImage}" alt="Item Image" style="max-width: 200px;"></p>-->
-<!--    <hr>-->
+<!--<h1>API Result</h1>-->
+<!--<div id="json-data">-->
+<!--    &lt;!&ndash; JSON 데이터의 내용을 출력 &ndash;&gt;-->
+<!--    <pre>-->
+<!--            {{jsonData}}-->
+<!--    </pre>-->
 <!--</div>-->
 
-<!--<div th:if="${apiResponse != null}">-->
-<!--    &lt;!&ndash; Loop through and display item information &ndash;&gt;-->
-<!--</div>-->
-<!--<div th:if="${errorMessage != null}">-->
-<!--    <p th:text="${errorMessage}"></p>-->
-<!--</div>-->
+<!--<script>-->
+<!--    // JSON 데이터를 예쁘게 포맷팅하여 출력하는 함수-->
+<!--    function formatJson(jsonString) {-->
+<!--        try {-->
+<!--            const parsedData = JSON.parse(jsonString);-->
+<!--            return JSON.stringify(parsedData, null, 2);-->
+<!--        } catch (error) {-->
+<!--            return "Invalid JSON data";-->
+<!--        }-->
+<!--    }-->
 
+<!--    const jsonDataElement = document.getElementById('json-data');-->
+<!--    const jsonDataString = jsonDataElement.textContent.trim();-->
+<!--    const formattedJson = formatJson(jsonDataString);-->
+
+<!--    jsonDataElement.innerHTML = `<pre>${formattedJson}</pre>`;-->
+<!--</script>-->
 <!--</body>-->
 <!--</html>-->
+
+
 
 
 <!DOCTYPE html>
