login에서 메인화면 연결, 카메라 타이레놀 연결

--- a/PillSafe-web/src/main/resources/templates/login.html
+++ b/PillSafe-web/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
         <div class="Line" style="width: 320px; height: 0px; border: 0.50px white solid"></div>
         <div class="main-box">
             <p>로그인 없이 이용할 수 있어요!</p>
-            <button class="main" onclick="location.href='mainWeb.html'">그냥 의약품만 검색하기</button>
+            <button class="main" onclick="location.href='/'">그냥 의약품만 검색하기</button>
         </div>
     </div>
   </div>
