--- a/PillSafe-web/src/main/resources/templates/apiResult.html
+++ b/PillSafe-web/src/main/resources/templates/apiResult.html
@@ -35,13 +35,44 @@
 
 
 
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--<head>-->
+<!--    <title>API Result</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<pre th:text="${apiResponse}"></pre>-->
+<!--</body>-->
+<!--</html>-->
+
+
+
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>API Result</title>
+    <meta charset="UTF-8">
+    <title>JSON Parsing Result</title>
 </head>
 <body>
-<pre th:text="${apiResponse}"></pre>
+<!--<div th:each="item, itemInfo : ${items}">-->
+<div th:each="item, itemInfo : ${items}" th:if="${itemInfo.index == 3}">
+    <h3 th:text="'항목[' + (${itemInfo.index} + 1) + ']'" ></h3>
+    <img th:src="${item.itemImage}" alt="" >
+    <p>업체명: <span th:text="${item.entpName}"></span></p>
+    <p>제품명: <span th:text="${item.itemName}"></span></p>
+    <p>효능: <span th:text="${item.efcyQesitm}"></span></p>
+    <p>사용법: <span th:text="${item.useMethodQesitm}"></span></p>
+    <p>주의사항 경고: <span th:text="${item.atpnWarnQesitm}"></span></p>
+    <p>주의사항: <span th:text="${item.atpnQesitm}"></span></p>
+    <p>상호작용: <span th:text="${item.intrcQesitm}"></span></p>
+    <p>부작용: <span th:text="${item.seQesitm}"></span></p>
+    <p>보관법: <span th:text="${item.depositMethodQesitm}"></span></p>
+</div>
 </body>
 </html>
+
+
+
+
+
 
