upload 페이지 수정 / 파비콘 추가

--- a/PillSafe-web/src/main/resources/templates/apiResult.html
+++ b/PillSafe-web/src/main/resources/templates/apiResult.html
@@ -34,6 +34,7 @@
 <html>
 <head>
     <title>API Result</title>
+    <link rel="shortcut icon" href="../static/favicon.ico">
 </head>
 <body>
 <pre th:text="${apiResponse}"></pre>
