--- a/PillSafe-web/src/main/resources/templates/result.html
+++ b/PillSafe-web/src/main/resources/templates/result.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Text Detection Result</title>
+  <link rel="shortcut icon" href="../static/favicon.ico">
 </head>
 <body>
 <h2>Text Detection Result</h2>
