--- a/PillSafe-web/src/main/resources/static/upload_style.css
+++ b/PillSafe-web/src/main/resources/static/upload_style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 
 /* Reset some default styles */
-body, h1, ul {
+body, h2{
     margin: 0;
     padding: 0;
     font-family: "Noto Sans KR", sans-serif;
@@ -34,44 +34,28 @@ main {
     /*padding: 20px;*/
 }
 
-.camera-wrapper {
+.wrapper {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-}
-
-.upload-wrapper{
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.material-symbols-outlined{
-    width: auto;
-}
-
-video{
-    width: 100%;
-    height: 100%;
-}
-.circle-button {
-    width: 60px;
-    height: 60px;
-    background-color: #D9D9D9;
-    color: black;
-    border: none;
-    border-radius: 50%;
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
+    gap: 40px;
     align-items: center;
-    cursor: pointer;
-    margin: 0 auto;
 }
 
+#upload-form{
+    display:inline-block;
+    text-align: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+/*button style*/
 .primary-button{
     display: inline-flex;
     padding: 10px 24px;
+    margin-top: 40px;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -86,4 +70,3 @@ video{
     letter-spacing: -1.8px;
 
 }
-
