--- a/PillSafe-web/src/main/resources/templates/camera.html
+++ b/PillSafe-web/src/main/resources/templates/camera.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>카메라 사진 찍기</title>
   <link rel="stylesheet" href="../static/camera_style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+  <link rel="shortcut icon" href="../static/favicon.ico">
   <script src="../static/camera.js"></script>
 </head>
 
@@ -24,7 +25,12 @@
       <canvas id="canvas" style="display: none;"></canvas>
       <div id="result"></div> <!-- 결과를 표시할 DOM 요소 -->
     </div>
-
+    <div class="upload-wrapper">
+      <p>이미 찍은 사진이 있다면?</p>
+      <button class="primary-button"  onclick="location.href='upload'" aria-label="파일 업로드">
+        파일 업로드
+      </button>
+    </div>
   </main>
 </body>
 </html>
