--- a/PillSafe-web/src/main/resources/templates/login.html
+++ b/PillSafe-web/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PillSafe</title>
-    <style> </style>
+    <link rel="shortcut icon" href="../static/favicon.ico">
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
