--- a/PillSafe-web/src/main/resources/templates/mainWeb.html
+++ b/PillSafe-web/src/main/resources/templates/mainWeb.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../static/main_style.css">
+  <link rel="shortcut icon" href="../static/favicon.ico">
   <title>PillSafe</title>
 </head>
 <body>
