--- a/PillSafe-web/src/main/resources/templates/upload.html
+++ b/PillSafe-web/src/main/resources/templates/upload.html
@@ -2,14 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Text Detection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>파일 업로드</title>
+  <link rel="stylesheet" href="../static/upload_style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="shortcut icon" href="../static/favicon.ico">
 </head>
 <body>
-<h2>Upload an image</h2>
-<form action="/upload" method="POST" enctype="multipart/form-data">
-  <input type="file" name="file" accept="image/*">
-  <button type="submit">Upload</button>
-</form>
-<p th:text="${error}"></p>
+  <header>
+    <div class="logo">
+      <img src="../static/logo.png" alt="필세이프 로고">
+    </div>
+  </header>
+  <main>
+    <div class="wrapper">
+      <h2>파일을 업로드 해주세요!</h2>
+      <div id="upload-form">
+        <form action="/upload" method="POST" enctype="multipart/form-data">
+          <input type="file" name="file" accept="image/*" style="width: 100%; text-align: center; margin-left: 100px;">
+          <button class="primary-button" type="submit">업로드</button>
+          <p>파일 확장자는 .jpg, .jpeg, .png의<br>
+            이미지 파일만 가능합니다.</p>
+        </form>
+      </div>
+    </div>
+  </main>
+  <p th:text="${error}"></p>
 </body>
 </html>
