--- a/PillSafe-web/src/main/resources/templates/mainWeb.html
+++ b/PillSafe-web/src/main/resources/templates/mainWeb.html
@@ -14,14 +14,23 @@
     </div>
   </header>
   <main>
-    <div class="buttons">
+    <div class="title-wrapper">
         <p>
             안전하고 간편한 <br>
             의약품 검색, <br>
             필 세이프
         </p>
-      <button class="circle-button"  onclick="location.href='camera'">검색</button>
     </div>
+      <div class="button-wrapper">
+          <button class="main-button" id="camera-button"  onclick="location.href='camera'">
+              카메라로 <br>
+              검색하기
+          </button>
+          <button class="main-button" id="search-button" onclick="location.href='search'">
+              텍스트로 <br>
+              검색하기
+          </button>
+      </div>
   </main>
 </body>
 </html>
