--- a/PillSafe-web/src/main/resources/templates/search.html
+++ b/PillSafe-web/src/main/resources/templates/search.html
@@ -2,23 +2,41 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Drug Search Result</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>텍스트 검색</title>
+
+    <link rel="stylesheet" href="../static/search_style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="shortcut icon" href="../static/favicon.ico">
 </head>
 <body>
-<h2>검색 결과</h2>
-
-<form action="/search" method="post">
-    <label>
-        <input type="text" name="textResult" placeholder="Enter your search text" />
-    </label>
-    <button type="submit">Search</button>
-</form>
-
-<hr>
-
-<div th:if="${text}">
-    <h3>Search results for: <span th:text="${text}"></span></h3>
-    <!-- Add more HTML to display search results if needed -->
-</div>
+    <header>
+        <div class="logo">
+            <img src="../static/logo.png" alt="필세이프 로고">
+        </div>
+    </header>
+    <main>
+        <div class="title-wrapper">
+            <h2>텍스트로 검색하세요!</h2>
+            <form action="/search" method="post">
+                <div>
+                    <label>
+                        <input type="text" name="textResult" placeholder="검색어를 입력하세요." class="text-field"/>
+                    </label>
+                </div>
+                <div>
+                    <button class="primary-button" type="submit">검색</button>
+                </div>
+            </form>
+        </div>
+        <div class="most-search-keyword">
+            <hr>
+        </div>
+    </main>
+    <div th:if="${text}">
+        <h3>Search results for: <span th:text="${text}"></span></h3>
+        <!-- Add more HTML to display search results if needed -->
+    </div>
 </body>
 </html>
