관리자 페이지: 회원 관리 시도...

--- a/PillSafe-web/src/main/resources/templates/login.html
+++ b/PillSafe-web/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
   <div class="login-box">
     <img class="logo" src="../static/logo.png" alt="필세이프 로고">
     <div class="button-box">
-        <button class="google">구글 계정으로 로그인</button>
+        <button class="google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
         <div class="Line" style="width: 320px; height: 0px; border: 0.50px white solid"></div>
         <div class="main-box">
             <p>로그인 없이 이용할 수 있어요!</p>
