--- a/PillSafe-web/src/main/resources/templates/formSuccess.html
+++ b/PillSafe-web/src/main/resources/templates/formSuccess.html
@@ -21,7 +21,7 @@
         <h2>설문 조사에 참여해주셔서 <br>
         감사합니다!
         </h2>
-        <button>
+        <button onclick="location.href='/'">
             처음으로
         </button>
     </div>
