form Success 페이지 연결 완료

--- a/PillSafe-web/src/main/resources/templates/form.html
+++ b/PillSafe-web/src/main/resources/templates/form.html
@@ -2403,7 +2403,7 @@
                     icon: "success", //success, warning, error
                     button: "확인"
                 }).then(() => {
-                    window.location.href = "/"; // 메인 페이지로 리다이렉트
+                    window.location.href = "/formSuccess"; // 리다이렉트
                 });
             } else if (type == 3) {
                 swal({
