의약품 읽어주기 / TTS 구현 (지은)

--- a/PillSafe-web/src/main/resources/templates/searchResult.html
+++ b/PillSafe-web/src/main/resources/templates/searchResult.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>검색 결과</title>
+  <script src="/apiResult.js"> </script>
 </head>
 <body>
 <div th:each="item, itemInfo : ${items}">
